tests/neg/semantic_nonvoid_empty_return.baa
// EXPECT: الدالة غير 'عدم' يجب أن تعيد قيمة
صحيح د() {
    إرجع.
}
